# store_dio

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
store_dio/: main.py  routers.py
store_dio/controllers/: product.py
store_dio/core/: config.py  exceptions.py
store_dio/db/: mongo_db.py
store_dio/models/: base.py  product.py
store_dio/schemas/: base.py  product.py
store_dio/usecases/: product.py
tests/: conftest.py  factories.py  logger.py
tests/controllers/: test_product.py
tests/schemas/: test_product.py
tests/usecases/: test_product.py
