[tool.poetry]
name = "store-dio"
version = "0.1.0"
description = "projeto para criar api com recursos facilitadores"
authors = ["guruck <guruck@gmail.com>"]
readme = "README.md"
packages = [{include = "store_dio"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pydantic = "^2.5.1"
pydantic-settings = "^2.1.0"
motor = "^3.3.1"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pre-commit = "^3.5.0"
httpx = "^0.25.1"
pytest-html = "^4.1.1"
pytest-metadata = "^3.1.1"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--ignore=docs_src",
]
xfail_strict = true
junit_family = "xunit2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
